--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>exiftool.js</title>
 
 <!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/report.css" rel="stylesheet">
+<link href="report/css/bootstrap.min.css" rel="stylesheet">
+<link href="report/css/report.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,8 +22,8 @@
 
     <div class="container-fluid">
         <h1>exiftool.js</h1>
-        <p> Over on github: 
-        <a href="">https://github.com/mattburns/exiftool.jsCompare the outputs from exiftool and exiftool.js</a></p>
+        <p> Over on 
+        <a href="https://github.com/mattburns/exiftool.js">github</a></p>
     </div>
 
 
