Added files that didn't run previously

--- a/report/sampleImages-_Other-007.JPG.html
+++ b/report/sampleImages-_Other-007.JPG.html
@@ -1313,7 +1313,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>2240710628</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
