--- a/report/sampleImages-_Other-110624 578.jpeg.html
+++ b/report/sampleImages-_Other-110624 578.jpeg.html
@@ -1325,7 +1325,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>1133524241</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
