--- a/report/sampleImages-_Other-Barcelona 007.JPG.html
+++ b/report/sampleImages-_Other-Barcelona 007.JPG.html
@@ -1331,7 +1331,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>0180105370</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
