--- a/report/sampleImages-_Other-IMG_0125.JPG.html
+++ b/report/sampleImages-_Other-IMG_0125.JPG.html
@@ -1230,7 +1230,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>0920404460</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
