--- a/report/sampleImages-_Other-IMG_2348.JPG.html
+++ b/report/sampleImages-_Other-IMG_2348.JPG.html
@@ -563,7 +563,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>859974b2bbd159cbb3de108c53e4960b</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
