--- a/report/sampleImages-_Other-IMG_3165.JPG.html
+++ b/report/sampleImages-_Other-IMG_3165.JPG.html
@@ -569,7 +569,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>06613cd2e6d7020c2dae6289827cc8b7</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
