--- a/report/sampleImages-_Other-IMG_9692.jpg.html
+++ b/report/sampleImages-_Other-IMG_9692.jpg.html
@@ -557,7 +557,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>e66a66cd54dc30ee71db9eb749f72649</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
