--- a/report/sampleImages-_Other-new york 175.JPG.html
+++ b/report/sampleImages-_Other-new york 175.JPG.html
@@ -575,7 +575,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>56e22e5863d779135eb6de8a5116d761</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
