--- a/report/sampleImages-_Other-003.JPG.html
+++ b/report/sampleImages-_Other-003.JPG.html
@@ -1463,7 +1463,7 @@
 <tr>
 <td>SerialNumberFormat</td>
 <td>Format 2</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
