--- a/report/sampleImages-_Other-013.JPG.html
+++ b/report/sampleImages-_Other-013.JPG.html
@@ -929,7 +929,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>0730508286</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
