--- a/report/sampleImages-_Other-Testbilder 153.JPG.html
+++ b/report/sampleImages-_Other-Testbilder 153.JPG.html
@@ -1247,7 +1247,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>0780239715</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
