Added linebreaks for easier diffing.

--- a/report/sampleImages-Canon-CanonPowerShotN100.jpg.html
+++ b/report/sampleImages-Canon-CanonPowerShotN100.jpg.html
@@ -593,7 +593,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>7670437e36e403384191f985e963ec8e</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
