--- a/report/sampleImages-_Other-003.JPG.html
+++ b/report/sampleImages-_Other-003.JPG.html
@@ -1457,7 +1457,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>2081000112</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
