--- a/report/sampleImages-_Other-013.JPG.html
+++ b/report/sampleImages-_Other-013.JPG.html
@@ -935,7 +935,7 @@
 <tr>
 <td>SerialNumberFormat</td>
 <td>Format 2</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
