--- a/report/sampleImages-_Other-IMG_2705.JPG.html
+++ b/report/sampleImages-_Other-IMG_2705.JPG.html
@@ -863,7 +863,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>285C82E562E84FAFA3BFD2C4CE484D05</td>
-<td class='diff'>0208050C08020E0506020E08040F0A0F0A030B0F0D020C040C0E0408040D0005</td>
+<td class='diff'></td>
 <td class='match'>285C82E562E84FAFA3BFD2C4CE484D05</td>
 </tr>
 <tr>
