--- a/report/sampleImages-_Other-IMG_8373.jpg.html
+++ b/report/sampleImages-_Other-IMG_8373.jpg.html
@@ -1404,7 +1404,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>1220700610</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
