--- a/report/sampleImages-_Other-IMG_8974.JPG.html
+++ b/report/sampleImages-_Other-IMG_8974.JPG.html
@@ -1319,7 +1319,7 @@
 <tr>
 <td>SerialNumber</td>
 <td>0380103183</td>
-<td class='diff'></td>
+<td class='missing'>-</td>
 <td class='missing'>-</td>
 </tr>
 <tr>
