--- a/report/sampleImages-_Other-canon_ixus_1100_hs_24.jpg.html
+++ b/report/sampleImages-_Other-canon_ixus_1100_hs_24.jpg.html
@@ -581,7 +581,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>1cea510088d093bf5a920e9eebbf1401</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
