--- a/report/sampleImages-_Other-IMG_0501.JPG.html
+++ b/report/sampleImages-_Other-IMG_0501.JPG.html
@@ -569,7 +569,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>dc689cd053d454d9934ae08200bbf2f4</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
