--- a/report/sampleImages-_Other-img_0115.jpg.html
+++ b/report/sampleImages-_Other-img_0115.jpg.html
@@ -575,7 +575,7 @@
 <tr>
 <td>ImageUniqueID</td>
 <td>77dfe10ab0d95bc597c2fa9ffc205313</td>
-<td class='missing'>-</td>
+<td class='diff'></td>
 <td class='missing'>-</td>
 </tr>
 <tr>
